Fixed word-wrap problem

--- a/job_board/static/css/detail.css
+++ b/job_board/static/css/detail.css
@@ -4,6 +4,7 @@ h1 {
 
 .job-detail {
 	font-family: 'Lato', sans-serif;
+	word-wrap: break-word;
 }
 
 .detail-title {
