--- a/job_board/static/css/main.css
+++ b/job_board/static/css/main.css
@@ -44,6 +44,10 @@
     font-weight: bold;
 }
 
+.job p {
+    word-wrap: break-word;
+}
+
 .timestamp {
     color: #7f8c8d;
     text-transform: uppercase;
